# terminal-searcher

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  debug_screen.py  flashback-test.sh  inspiration.txt  plan-comprehensive.txt  plan-deepseek-ai-answer.txt  plan-draft.txt  plan-revised.txt  plan-summary.txt  problems.txt  pyproject.toml  reference-plan-detailed-from-screenshot-searcher-project.txt  reference_file_structure.txt  related_project_urls.txt  similar-apps.txt  test_bm25_index.py  test_integration.sh  test_pty_attachment.py  test_title.py  todo.txt  validate_integration.py
docs/: HOW_TO_USE_LOCAL_XTERM_JS.md
flashback_terminal/: __init__.py  __main__.py  bm25_index.py  cli.py  config.py  database.py  deps.py  retention.py  search.py  server.py  session_manager.py  terminal.py  whoosh_index.py
flashback_terminal/api/: __init__.py  websocket.py
flashback_terminal/static/: index.html
flashback_terminal/static/css/: style.css
flashback_terminal/static/js/: app.js
flashback_terminal/templates/: capture_detail.html  index.html  timeline.html
flashback_terminal/workers/: __init__.py  capture_worker.py  embedding_worker.py
reference/bm25_persistant_reference/: bm25.py
reference/bm25s_code_reference/: config_search_methods.py  flexible_search.py  high-level.py  save_load_index.py
reference/chromadb_example_code/: intro.py
reference/gnu_screen_info/: ai_gnu_screen_kiosk.md  ai_gnu_screen_unset_sty.md  gnu_screen_manpage.txt
reference/hnswlib_index_reference/: test_async.py  test_sync.py
reference/pty_session/: attach_to_tmux_or_screen.sh  gnu_screen_capture_pane.md  task.txt  terminal.py
reference/sqlite_bm25_index/: example_async.py  example_sync.py  third_party_code.md
reference/terminal_screenshot_taking/: ai-list-and-capture-tmux-panes.md  readme.txt  render_screenshot.py  tmux_kiosk.conf
reference/vectordb_example/: comment.txt  usearch_dockerfile  usearch_readme.md
