[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flashback-terminal"
version = "0.1.0"
description = "Recoverable web terminal with semantic search and session history"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "James Brown", email = "randomvoidmail@foxmail.com"}
]
keywords = ["terminal", "xterm", "web-terminal", "session-recovery", "search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0", # not used in code, can remove
    "aiosqlite>=0.19.0", # may not needed
    "pyyaml>=6.0",
    "click>=8.0",
    "apscheduler>=3.10.0", # mostly not needed
    "python-multipart>=0.0.6", # not seen in code. we do not do screenshot upload search
    "websockets>=12.0",
    "rank-bm25>=0.2.2", # may not needed, we want those can persist and update index, like whoosh? or store index in sqlite?
    "Pillow>=10.0", # not in code, may not need
    "jinja2>=3.1.0",
    "parse>=1.12.0",
    "aiofiles>=23.0.0", # i don't understand why process io is not used with aiofiles, maybe asyncio.run_in_executor is enough? 
]

[project.optional-dependencies]
embedding = [
    "requests>=2.31.0",
    "numpy>=1.24.0",
]
screenshot = [
    "agg_python_bindings==0.1.4",
]
search = [
    "jieba>=0.42.1",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
]
all = ["flashback-terminal[embedding,screenshot,search]"]

[project.scripts]
flashback-terminal = "flashback_terminal.cli:main"

[project.urls]
Homepage = "https://github.com/james4ever0/flashback-terminal"
Repository = "https://github.com/james4ever0/flashback-terminal"
Issues = "https://github.com/james4ever0/flashback-terminal/issues"
